[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostreplay"
version = "0.1.0"
description = "Turn production error logs into reproducible failing tests"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0", 
    "pytest>=7.0.0",
    "freezegun>=1.2.0",
    "rich>=13.0.0",
]

[project.scripts]
ghostreplay = "ghostreplay.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/ghostreplay"
Repository = "https://github.com/yourusername/ghostreplay.git"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]